fix contraste bouton carroussel

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,11 @@ body {
 	font-size: 26px;
 }
 
+.carousel-control-prev,
+.carousel-control-next {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .nav ul {
 	display: flex;
 	list-style-type: none;
@@ -84,6 +89,7 @@ body {
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
+	color: #1a1a1a;
 }
 #about-me p {
 	width: 80%;
